[project]
name = "link-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.7.0",
    "mkdocs-monorepo-plugin>=1.1.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mkdocs-material>=9.7.0",
    "mkdocs-monorepo-plugin>=1.1.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]
